Update contact info

--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
       <div class="footer">
         <div class="contact">
           <p>
-            Tedi Konda<br>
-            <a href="https://twitter.com/tedi">@tedi</a><br>
-            <a href="mailto:tedikonda@gmail.com">tedikonda@gmail.com</a><br>
+            Bill Transue<br>
+            <a href="https://twitter.com/billy_ran_away">@billy_ran_away</a><br />
+            <a href="mailto:bill@transu.es">bill@transu.es</a><br />
           </p>
         </div>
         <div class="contact">
           <p>
-            Corey Speisman<br>
-            <a href="https://twitter.com/cdspeis">@cdspeis</a><br>
-            <a href="mailto:cspeisman@gmail.com">cspeisman@gmail.com</a><br>
+            Andrei Bondarev<br>
+            <a href="https://twitter.com/rushing_andrei">@rushing_andrei</a><br />
+            <a href="mailto:andrei.bondarev13@gmail.com">andrei.bondarev13@gmail.com</a><br />
           </p>
         </div>
       </div>
